- f1.cigar Cigar of N parameters for vectors
- f0.schwefel Schwefel of N parameters for variadic input
- f1.schwefel Schwefel of N parameters for vectors
- f0.bohachevsky Bohachevsky of N parameters for variadic input
- f1.bohachevsky Bohachevsky of N parameters for vectors
- f0.schaffer Schaffer of N parameters for variadic input
- f1.schaffer Schaffer of N parameters for vectors
- predatorprey.plot1 A wrapper for predatorprey.plot0 for parameter list instead single vars
- compare.algorithms1 Sistematic comparison of optimization algorithms
- show.comp1 Plot the results of 'compare.algorithms1'

### Changed
- predatorprey.plot - Now is predatorprey.plot0
- Estimates$getBest() - Fixed return value for ACOR eliminating "w"
- Default neighborhood function of PSO, previously was KN and now is K4



## EvoPER [0.3.0] - 2016-11-26
### Added
- Estimates class for returning results of extremize function
- OptionsACOR class for ACOr Options
- abm.acor Implementation of ACO for continuous domains
- abm.ees1 EvoPER Implementation of simple ES
- OptionsFactory Creates an instance of Options class
- naiveperiod Search for period in data
- gm.mean Calculate the geometric mean
- elog.level Wrapper (futile.logger) for getting/setting log level
- elog.error Wrapper (futile.logger) for logging error messages
- elog.info  Wrapper (futile.logger) for logging info messages
- elog.debug Wrapper (futile.logger) for logging debug messages
- acor.updateants ACO internal function
- acor.weigth ACO internal function
- acor.probabilities ACO internal function
- acor.lthgaussian ACO internal function
- acor.sigma ACO internal function
- acor.archive ACO internal function
- acor.S ACO internal function
- acor.F ACO internal function
- acor.W ACO internal function
- acor.N ACO internal function
- es.evaluate General ES function for evaluating a solution
- ees1.mating EES1 internal function
- ees1.mating1 EES1 internal function
- ees1.recombination EES1 internal function