@@ -13,6 +13,7 @@ This project adheres to [Semantic Versioning](http://semver.org/).
 - f1.bohachevsky Bohachevsky of N parameters for vectors
 - f0.schaffer Schaffer of N parameters for variadic input
 - f1.schaffer Schaffer of N parameters for vectors
+- random.wheel Function for randomlt gerating random seeds
 - predatorprey.plot1 A wrapper for predatorprey.plot0 for parameter list instead single vars
 - compare.algorithms1 Sistematic comparison of optimization algorithms
 - show.comp1 Plot the results of 'compare.algorithms1'
@@ -21,6 +22,7 @@ This project adheres to [Semantic Versioning](http://semver.org/).
 - predatorprey.plot - Now is predatorprey.plot0
 - Estimates$getBest() - Fixed return value for ACOR eliminating "w"
 - Default neighborhood function of PSO, previously was KN and now is K4
+- contourplothelper - Added parameters nbins, binwidth and points for a fine control of underlying kde2d
 
 
 
